feat: component serializer to merge strings/components into a single component